[tool.poetry]
name = "hockey_pool"
version = "0.1.0"
description = ""
authors = ["Mart <martinplasse86@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
selenium = "^3.141.0"
ipykernel = "^5.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
